# automl-data

./: .gitignore  README.md  pyproject.toml
automl_data/: __init__.py
automl_data/adapters/: balancing.py  base.py  encoding.py  feature_cleaner.py  imputation.py  outliers.py  profiling.py  scaling.py
automl_data/adapters/image/: __init__.py  augmentor.py  preprocessor.py
automl_data/adapters/text/: __init__.py  augmentor.py  preprocessor.py
automl_data/core/: config.py  container.py  forge.py  pipeline.py
automl_data/utils/: __init__.py  decorators.py  dependencies.py  exceptions.py  logging.py  text_utils.py
examples/: benchmark_pipeline.py  benchmark_text_pipeline.py  check_env.py  house_prices_complex.py  nlp_benchmark.py  ruwordnet_demo.py  test_cifar10_pipeline.py  test_image_processing.py  test_minimal_image.py  test_tabular_classification.py  test_tabular_regression.py  titanic_basic.py
tests/: conftest.py  test_adapters.py  test_adapters_unit.py  test_balancing_classification.py  test_container.py  test_decorators.py  test_exceptions_unit.py  test_forge.py  test_forge_integration.py  test_forge_unit.py  test_image_processing.py  test_text_processing.py
