[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-data"
version = "1.0.0"
description = "Automated ML data preparation and augmentation pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["machine-learning", "data-preparation", "automl", "preprocessing"]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
full = [
    "ydata-profiling>=4.0.0",
    "great-expectations>=0.18.0",
    "scikit-learn>=1.3.0",
    "category-encoders>=2.6.0",
    "pyod>=1.1.0",
    "imbalanced-learn>=0.11.0",
    "featuretools>=1.28.0",
    "optuna>=3.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/KsuZavyalova/automl-data"
Documentation = "https://automl-data.readthedocs.io"
Repository = "https://github.com/KsuZavyalova/automl-data"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=automl_data --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true